--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@
     color: rgb(44, 7, 71);
     font-family: 'Iran Sans';
     font-size: 1rem;
-    magin-top: 1rem;
+    pading-top: 1rem;
 }
 .lnk{
     font-family: 'Iran Sans';
