--- a/style.css
+++ b/style.css
@@ -110,14 +110,13 @@
     font-size: 1rem;
 }
 .ckr{
+    padding-top: 1rem;
     text-align: center;
     color: rgb(44, 7, 71);
     font-family: 'Iran Sans';
     font-size: 1rem;
-    margin-top: 1px;
 }
 .lnk{
-    margin-top: 1px;
     font-family: 'Iran Sans';
     font-size: 1rem;
     color:#282e08;
