--- a/style.css
+++ b/style.css
@@ -10,145 +10,246 @@
     font-style: normal;
     font-display: swap;
 }
-* {
-    margin: 0;
+body{
+    background-image: image-set("wall.jpg");
+}
+*{
     padding: 0;
-    box-sizing: border-box;
-  }
-  img {
-    max-width: 100%;
+    margin: 0;
+}
+img {
+    max-width: 35%;
     height: auto;
+    margin-right: 30%;
+    border-radius: 10%;
   }
-  body {
-    min-height: 100vh;
+img:hover{
+    border-radius: 0;
+    filter: brightness(125%);
+    filter:grayscale(120%);
+    cursor:all-scroll;
+}
+.ul{
+    display: block;
+    text-align: right;
+    direction: rtl;
+}
+.header{
+    direction: rtl;
+    font-family: 'Adobe Arabic';
+    font-size: 20px;
+    background-image: image-set("backback.jpg");
+    background-size: 100%;
+    color: white;
+    display: flex;
+    justify-content: right;
+    flex-direction: row;
+    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 10px;
+}
+.header_pic{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 20px;
+    width: 40%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-image: image-set("backii.jpg");
-    background-size: 100%;
-    font-family: 'Adobe Arabic';
-  }
-  .container {
-    max-width: 80%;
-  }
-  .login__form {
+    justify-content: right;
+}
+.header_left{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 60%;
     display: flex;
     flex-direction: row;
-    background-color: #2a3248;
-    border-radius: 20px;
-    overflow: hidden;
-    min-height: 80vh;
-  }
-  .login__form__img img{
+    align-items: center;
+    justify-content: center;
+}
+.header_word{
+    margin-left: 60%;
     width: 100%;
-    height: 110vh;
-    object-fit: cover;
-    display: block;
-  }
-  .login__form__img{
-    width: 50%;
-  }
-  .login__form__right{
-    background-image: image-set("wall.jpg");
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+}
+.header_word_titr{
+    margin-left: 10%;
+}
+.main{
+    direction: rtl;
+    background-image: image-set("bacck.jpg");
     background-size: 100%;
-    padding: 5rem;
-    width: 50%;
+    border-radius: 10px;
+    color: black;
+    height: 100%;
+    display: flex;
+    justify-content: right;
+    flex-direction: row;
+    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: 10px;   
+}
+.main img{
+    filter: blur(1px);
+}
+.main_left{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center
+}
+.main_right{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 40%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-  .login__form__right h1{
-    color: #45acc6;
-    margin-bottom: 2rem;
-  }
-  .login__form__right form input, .login__form__right form button{
-    width: 100%;
-    margin-bottom: 0.5rem;
-    border: 2px solid #5b6c84;
-    padding: 0.6rem;
-    border-radius: 5px;
-  }
-  .login__form__right form input:focus{
-    border: 2px solid #000000;
-    box-shadow: 0px 0px 0px 3px #457bc6;
-  }
-  .login__form__right form label{
-    font-size: 1.3rem;
-    color: #c6c27d;
-  }
-  .login__form__right form{
-    text-align: right;
-  }
-  .login__form__right form input{
-    background-color:rgb(45, 60, 60);
+}
+.about_me{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    height: 50%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.ertebat{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    padding-left: 10%;
+    padding-right: 10%;
+    height: 50%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.shoql{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    padding-left: 10%;
+    padding-right: 10%;
+    height: 30%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.tahsil{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    padding-left: 10%;
+    padding-right: 10%;
+    height: 40%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.ability{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    padding-left: 10%;
+    padding-right: 10%;
+    height: 30%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.main_titr{
+    color: rgb(186, 107, 173);
     font-family: 'Adobe Arabic';
-    font-size: 1rem;
-    color: #fff;
-  }
-.login__form__right form button{
-    color: #f1f183;
-    font-family: 'Adobe Arabic';
-    background-color: rgb(27, 79, 96);
-    border: none;
-    font-size: 1.4rem;
-    margin-top: 1rem;
-    padding: 0.7rem;
-    cursor: pointer;
-}
-.login__form__right form button:hover{
-    background-color: midnightblue;
-    color: bisque;
-}
-.login__form__right form input::placeholder{
-    color: #9aa463;
-    font-family: sans-serif;
-    font-size: 0.75rem;
-}
-.txt{
-    color: #9aa463;
-    font-size: 1rem;
-}
-.ckr{
-    padding-top: 1rem;
+    font-size: 30px;
+    background-color: rgb(53, 46, 46);
+    border-radius: 10px;
+    width: 60%;
+    height: auto;
+    padding: 5px;
     text-align: center;
-    color: rgb(44, 7, 71);
+}
+.main_p{
     font-family: 'Iran Sans';
-    font-size: 1rem;
+    font-size: 15px;
+    width: 60%;
+    height: auto;
+    margin-top: 5%;
+    padding: 5px;
+    text-align: justify;
 }
-.lnk{
+.er_titr{
+    font-family: 'Adobe Arabic';
+    font-size: 20px;
+    margin-top: 5%;
+    padding: 5px;
+}
+.er_ul{
     font-family: 'Iran Sans';
-    font-size: 1rem;
-    color:#282e08;
+    font-size: 15px;
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
+    padding: 5px;
 }
-.lnk:hover{
-    cursor: pointer;
+.sh_p{
+    font-family: 'Iran Sans';
+    font-size: 15px;
+    width: 60%;
+    height: auto;
+    margin-top: 2.5%;
+    padding: 5px;
+    text-align: justify;
 }
-.lnj{
-    color: #457bc6;
+.sh_ul{
+    font-family: 'Iran Sans';
+    font-size: 15px;
+    margin-bottom: 2.5%;
+    padding: 5px;
+    text-align: justify;
 }
-@media screen and (min-width: 768px) {
-    .login__form {
-      display: flex;
-      flex-direction: row;
-      background-color: #2a3248;
-      border-radius: 20px;
-      overflow: hidden;
-    }
-    .login__form__right {
-      padding: 5rem;
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-    .login__form__img {
-      width: 50%;
-    }
-    .login__form__img img {
-      height: 90vh;
-      width: 100%;
-      display: block;
-    }
-  }
+.th_ul{
+    font-family: 'Iran Sans';
+    font-size: 15px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 5px;
+    text-align: justify;
+}
+.ab_ul{
+    font-family: 'Iran Sans';
+    font-size: 15px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 5px;
+    text-align: justify;
+}
+.main_titr:hover{
+    background-color: beige;
+    color: deeppink;
+    cursor:grab;
+}
